--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,8 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
-    position: relative;
+   position: relative;
+   overflow: auto;
 }
 
 .float-left {
@@ -73,7 +74,7 @@ p {
 .content {
     width: 75%;
     display: inline-block;
-    margin: auto 20px auto auto;
+    margin-left: 20px;
 }
 
 .search-engine-optimization {
